# luma

./: .gitignore  BUGFIX_LOG.md  CMakeLists.txt  DEVELOPMENT_LOG.md  GOLDEN_PATH.md  README.md  imgui.ini  main.cpp
apps/creator_imgui/: main.cpp
apps/creator_win/: README_REMOVED.txt  main.cpp
apps/demo/: main.cpp
apps/dx12_clear/: main.cpp
apps/luma_studio/: main.cpp
apps/luma_studio_macos/: AppDelegate.h  AppDelegate.mm  Info.plist  LumaView.h  LumaView.mm  main.mm
apps/luma_viewer_android/: build.gradle  gradle.properties  settings.gradle
apps/luma_viewer_android/app/: build.gradle
apps/luma_viewer_android/app/src/main/: AndroidManifest.xml
apps/luma_viewer_android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  vulkan_renderer.cpp  vulkan_renderer.h
apps/luma_viewer_android/app/src/main/java/com/luma/viewer/: MainActivity.kt
apps/luma_viewer_android/app/src/main/res/layout/: activity_main.xml
apps/luma_viewer_android/app/src/main/res/values/: strings.xml  themes.xml
apps/luma_viewer_ios/: AppDelegate.h  AppDelegate.mm  Info.plist  LaunchScreen.storyboard  LumaViewController.h  LumaViewController.mm  SceneDelegate.h  SceneDelegate.mm  main.mm
apps/luma_viewer_web/: index.html  package.json
apps/luma_viewer_web/src/: camera.ts  geometry.ts  main.ts  math.ts  renderer.ts
assets/scenes/: demo_basic.luma  demo_lighting.luma  demo_materials.luma
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHARACTER_CREATION_SPEC.md  CHARACTER_CREATION_TEST_GUIDE.md  PLUGIN_DEVELOPMENT.md
docs/tutorials/: 01_getting_started.md  02_scene_setup.md  03_materials.md  04_animation.md  05_lighting.md  06_optimization.md  07_character_creation.md
engine/: engine_facade.cpp  engine_facade.h
engine/actions/: action.cpp  action.h
engine/ai/: behavior_tree.h  nav_agent.h  navmesh.h
engine/animation/: animation.h  animation_clip.h  animation_editor.h  animation_layer.h  animation_preview.h  animation_test.h  animation_tools.h  animator.h  blend_tree.h  camera_animation.h  ik_system.h  lip_sync.h  pose_editor.h  skeleton.h  state_machine.h  timeline.h
engine/asset/: asset.h  asset_browser.h  asset_manager.h  async_texture_loader.cpp  async_texture_loader.h  hdr_loader.cpp  hdr_loader.h  model_loader.cpp  model_loader.h  pipeline.cpp  pipeline.h
engine/audio/: audio.h
engine/character/: accessory_system.h  animation_retargeting.h  auto_rig.h  base_human_loader.h  blend_shape.h  body_part_system.h  cartoon_features.h  character.h  character_body.h  character_creator_ui.h  character_exporter.h  character_face.h  character_presets.h  character_renderer.h  character_template.h  character_templates.h  cloth_simulation.h  clothing_loader.h  clothing_skinning.h  clothing_system.h  clothing_textures.h  decal_system.h  expression_presets.h  eye_rendering.h  facial_rig.h  hair_rendering.h  hair_system.h  makehuman_integration.h  skin_rendering.h  standard_rig.h  stylized_rendering.h  texture_system.h  uv_mapping.h
engine/character/ai/: ai_inference.h  ai_model_manager.h  face_reconstruction.h
engine/data/: data_system.h
engine/editor/: asset_browser.h  command.h  demo_mode.h  gizmo.h  history_panel.h  hotkey_system.h  property_inspector.h  undo_system.h  viewport_tools.h
engine/editor/commands/: material_commands.h  scene_commands.h  transform_commands.h
engine/environment/: day_night_cycle.h  underwater_effects.h  water_effects.h  water_interaction.h  water_physics.h  water_system.h  weather_system.h
engine/export/: gltf_exporter.h  model_exporter.h  screenshot.h
engine/foundation/: log.cpp  log.h  math_types.h  types.h
engine/game_ui/: ui_core.h  ui_layout.h  ui_system.h  ui_widgets.h
engine/graph/: timeline.h
engine/lighting/: light.h
engine/material/: material.h  material_library.h
engine/network/: network.h
engine/particles/: particle.h  particle_modules.h  particle_presets.h
engine/physics/: collision.h  constraints.h  physics_debug.h  physics_world.h  raycast.h
engine/plugin/: plugin_examples.h  plugin_manager.h  plugin_system.h
engine/project/: project_file.h
engine/renderer/: gpu_instancing.h  ibl_generator.cpp  ibl_generator.h  lod_system.h  mesh.h  pbr_renderer.cpp  pbr_renderer.h  post_process.h  unified_renderer.h  unified_renderer_dx12.cpp  unified_renderer_metal.mm
engine/renderer/gi/: gi_system.h  light_probe.h  reflection_probe.h  spherical_harmonics.h
engine/renderer/render_graph/: render_graph.h
engine/renderer/rhi/: dx12_backend.cpp  dx12_backend.h  dx12_rhi.cpp  dx12_rhi.h  metal_backend.cpp  metal_rhi.h  metal_rhi.mm  rhi.h  rhi_device.h  rhi_factory.cpp  rhi_resources.h  rhi_types.h  vulkan_backend.cpp
engine/renderer/shaders/: advanced_post_process.metal  basic.hlsl  blend_shape.metal  particle.metal  pbr.hlsl  pbr.metal  post_process.hlsl  post_process.metal  shadow.hlsl  skinned.hlsl  skinned.metal
engine/rendering/: advanced_shadows.h  culling.h  ibl.h  instancing.h  lod.h  render_optimizer.h  render_presets.h  ssao.h  ssr.h  volumetrics.h
engine/scene/: entity.h  picking.h  prefab.h  scene.cpp  scene.h  scene_graph.h  scene_layout.h  scene_manager.cpp  scene_manager.h
engine/script/: script_engine.cpp  script_engine.h  visual_script.h
engine/serialization/: json.h  scene_serializer.h
engine/terrain/: foliage.h  terrain.h  terrain_generator.h
engine/ui/: editor_ui.h  panels.h
engine/util/: file_watcher.cpp  file_watcher.h
engine/video/: video_export.h
engine/viewport/: orbit_camera.h  viewport.h
examples/: 01_basic_scene.h  02_animation.h  03_materials.h  04_lighting.h  05_post_processing.h  06_performance.h  07_character_creator.h  examples.h
tests/: integration_test.h  run_tests.cpp  unit_tests.h
tools/packager/: main.cpp
